--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,13 @@
         android:theme="@style/Theme.SplashActivity"
         tools:targetApi="31">
         <activity
+            android:name=".OwnerDashboardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
+        <activity
             android:name=".AddLabourDetailsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity
             android:name=".OwnerRegisterActivity"
             android:exported="false" />
@@ -35,7 +40,7 @@
         </activity>
         <activity
             android:name=".LabourLoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
